# pigdata

./: .gitignore  CMakeLists.txt  README.md
r/titanic/: titanic.R  titanic1.R  titanic2.R  titanic3.R  titanic4.R  titanic5.R  titanic6.R  titanic7.R  titanic8.R
src/: CMakeLists.txt  jsonimagemodel.cpp  jsonimagemodel.h  jsonimageprovider.cpp  jsonimageprovider.h  jsonparser.cpp  jsonparser.h  main.cpp  qml.qrc
src/qml/: ImageFileDialog.qml  main.qml  qml.qrc
